# ito-speech-to-text

./: .env.example  README.md  components.json  electron-builder.config.js  package.json  render.yaml  shared-constants.js  tailwind.config.js
.github/workflows/: build-windows.yml  build.yml  release.yml
app/: app.tsx  index.d.ts  index.html  renderer.tsx
app/contexts/: BillingContext.tsx
app/hooks/: useBillingState.ts  useDeviceChangeListener.ts
app/media/: microphone.ts
app/performance/: performance.autotune.ts  performance.config.ts  performance.context.tsx  performance.engine.ts  performance.monitor.ts
app/store/: useAdvancedSettingsStore.ts  useAppStylingStore.ts  useAudioStore.ts  useAuthStore.ts  useDictionaryStore.ts  useMainStore.ts  useNotesStore.ts  useOnboardingStore.ts  usePerformanceStore.ts  useSettingsStore.ts  useUserDetailsStore.ts
app/styles/: app.css  globals.css  window.css
app/utils/: debouncedStoreSync.ts  healthCheck.ts  soundPlayer.ts
lib/auth/: events.ts
lib/clients/: grpcClient.ts
lib/constants/: generated-defaults.ts  store-keys.ts
lib/main/: app.ts  autoUpdaterWrapper.ts  cartesiaStreamClient.ts  itoSessionManager.test.ts  itoSessionManager.ts  itoStreamController.test.ts  itoStreamController.ts  logger.ts  main.ts  recordingStateNotifier.ts  serverKeepAlive.ts  store.ts  syncService.test.ts  syncService.ts  teardown.ts  (+1 more)
native/: Cargo.toml
native/browser-url-reader/: Cargo.toml  browser-url-reader.manifest  build.rs
native/browser-url-reader/src/: main.rs
server/: .env.example  package.json  tsconfig.json
(+119 files in other folders)
