[package]
name = "browser-url-reader"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_Accessibility",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Com",
    "Win32_System_Threading",
] }

[build-dependencies]
tauri-winres = "0.3.5"

[lints]
workspace = true
